# O.R.I.O.N

./: README.md  pyproject.toml
orion/: __init__.py  app.py
orion/config/: settings.py
orion/core/: agent.py  graph.py  lc_model.py  llm.py  prompt.py  protocol.py
orion/memory/: ltm.py  store.py
orion/safety/: __init__.py  layer.py
orion/tools/: __init__.py  base.py  create_file.py  exec_command.py  get_system_info.py  manager.py  web_content_load.py  web_search.py
orion/ui/: console.py
orion/utils/: schema.py
tests/: test_app_logging.py  test_create_file_tool.py  test_lc_model.py  test_ltm.py  test_protocol.py  test_safety.py
